# garment

./: Cargo.toml
.cargo/: config.toml
.github/actions/rustup/: action.yml
.github/workflows/: ci.yml  codecov.yml
examples/: derive.rs
garment-derive/: Cargo.toml
garment-derive/src/: lib.rs
src/: debug_report_handler.rs  diagnostic.rs  error.rs  graphical_report_handler.rs  labeled_source_span.rs  lib.rs  named_source.rs  panic.rs  report.rs  report_handler.rs  source_code.rs  source_offset.rs  source_span.rs
tests/: debug_report_handler.rs  derive.rs  error.rs  graphical_report_handler.rs  mod.rs  report.rs  source_code.rs
